# resvg-wasm

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  README.md  build.sh  deny.toml  index.ts  index_main.ts  iresvg.ts  package.json  test.mjs  tsconfig.browser.json  tsconfig.json
.cargo/: config
src/: lib.rs
