[package]
name = "resvg-wasm"
version = "0.1.0"
description = "resvg as a wasm module"
repository = "https://github.com/bpowers/resvg-wasm"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
resvg = { version = "0.14", default-features = false }
usvg = { version = "0.14", default-features = false, features = ["text"] }
tiny-skia = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io]
console_error_panic_hook = { git = "https://github.com/bpowers/console_error_panic_hook", version = "0.1.6", rev = "45f72ebad46ef9a026f99b6853aceecbbdf3772c" }
